build-deps stage is now independent from language-deps

--- a/exaslct_src/test/resources/test-flavor/base_test_build_run/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/base_test_build_run/Dockerfile
@@ -1,4 +1,12 @@
-FROM {{base_test_deps}}
+FROM {{language_deps}}
+
+COPY --from={{base_test_deps}} /usr /usr
+COPY --from={{base_test_deps}} /lib /lib
+COPY --from={{base_test_deps}} /bin /bin
+COPY --from={{base_test_deps}} /opt /opt
+COPY --from={{base_test_deps}} /etc /etc
+
+RUN ldconfig
 
 RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
