--- a/exaslct_src/test/resources/test-flavor/build_deps/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/build_deps/Dockerfile
@@ -1,8 +1,14 @@
-FROM {{language_deps}}
+FROM ubuntu:18.04
 
 
 RUN apt-get -y update && \
-    apt-get install -y curl openjdk-8-jdk wget tar build-essential && \
+    apt-get install -y  curl \
+                        openjdk-8-jdk \
+                        wget \
+                        tar \
+                        build-essential \
+                        locales \
+                        libpcre3-dev && \
 	echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list && \
 	curl https://bazel.build/bazel-release.pub.gpg | apt-key add - && \
 	apt-get update && \
