--- a/exaslct_src/test/resources/test-flavor/build_run/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/build_run/Dockerfile
@@ -1,4 +1,12 @@
-FROM {{build_deps}}
+FROM {{language_deps}}
+
+COPY --from={{build_deps}} /usr /usr
+COPY --from={{build_deps}} /lib /lib
+COPY --from={{build_deps}} /bin /bin
+COPY --from={{build_deps}} /opt /opt
+COPY --from={{build_deps}} /etc /etc
+
+RUN ldconfig
 
 RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
