docker_pull_or_build_image_task now directly tries to pull instead of request information from the registry first and in build_context_hasher.py order of hashes_to_hash is more clear defined

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,4 @@ install:
   - sudo pip install pipenv
 
 script:
-  - ./exaslct run-db-test --flavor-path exaslct_src/test/resources/test-flavor/ --release-type Release --workers 5
-
+  - ./exaslct run-db-test --flavor-path exaslct_src/test/resources/test-flavor/ --release-type Release --workers 5 --docker-repository-name docker.io/tkilias/script-language-container
