refactor flavor standard-EXASOL-6.1.0 and add some todos to exaslc

--- a/flavors/standard-EXASOL-6.1.0/flavor_base/base_test_deps/Dockerfile
+++ b/flavors/standard-EXASOL-6.1.0/flavor_base/base_test_deps/Dockerfile
@@ -1,7 +1,10 @@
 FROM {{build_deps}}
 
+RUN mkdir -p /packages
+COPY base_test_deps/packages /packages/base_test_deps
+
 RUN apt-get -y update && \
-    apt-get -y install python-protobuf python-zmq gdb valgrind gdbserver binutils patchelf chrpath strace && \
+    apt-get -y install $(cat /packages/base_test_deps/apt_get_packages) && \
     locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
