fix wrong path for packages in flavor_base_deps of standard-EXASOL-6.1.0, add wait for bucketfs and add some todos

--- a/flavors/standard-EXASOL-6.1.0/flavor_base/flavor_base_deps/Dockerfile
+++ b/flavors/standard-EXASOL-6.1.0/flavor_base/flavor_base_deps/Dockerfile
@@ -20,6 +20,6 @@ RUN apt-get -y update && \
     apt-get -y autoremove && \
     ldconfig
 
-RUN /scripts/install_packages.sh "R" "Rscript -e" /packages/r_packages
-RUN /scripts/install_packages.sh "PYTHON2-PIP" "pip install" /packages/pip_packages
-RUN /scripts/install_packages.sh "PYTHON3-PIP3" "pip3 install" /packages/pip3_packages
+RUN /scripts/install_packages.sh "R" "Rscript -e" /packages/flavor_base_deps/r_packages
+RUN /scripts/install_packages.sh "PYTHON2-PIP" "pip install" /packages/flavor_base_deps/pip_packages
+RUN /scripts/install_packages.sh "PYTHON3-PIP3" "pip3 install" /packages/flavor_base_deps/pip3_packages
