--- a/flavors/standard-EXASOL-6.1.0/flavor_base/release/Dockerfile
+++ b/flavors/standard-EXASOL-6.1.0/flavor_base/release/Dockerfile
@@ -6,12 +6,15 @@ COPY --from={{language_deps}} /lib /lib
 COPY --from={{language_deps}} /bin /bin
 COPY --from={{language_deps}} /opt /opt
 COPY --from={{language_deps}} /etc /etc
+COPY --from={{language_deps}} /packages /packages
 
 COPY --from={{flavor_customization}} /usr /usr
 COPY --from={{flavor_customization}} /lib /lib
 COPY --from={{flavor_customization}} /bin /bin
 COPY --from={{flavor_customization}} /opt /opt
 COPY --from={{flavor_customization}} /etc /etc
+COPY --from={{flavor_customization}} /packages /packages
+
 
 RUN ldconfig
 
