--- a/flavors/standard-EXASOL-6.1.0/flavor_base/build_deps/Dockerfile
+++ b/flavors/standard-EXASOL-6.1.0/flavor_base/build_deps/Dockerfile
@@ -4,6 +4,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV ARCHIVE_UBUNTU_PREFIX=de.
 RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
 
+COPY 01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
+COPY scripts /scripts
 RUN mkdir -p /packages
 COPY build_deps/packages /packages/build_deps
 
