--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/flavor_base_deps/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/flavor_base_deps/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:16.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -10,7 +10,11 @@ COPY scripts /scripts
 RUN mkdir -p /packages
 COPY flavor_base_deps/packages /packages/flavor_base_deps
 
-RUN apt-get -y update && \
+# ppa:deadsnakes/ppa needed for python3.6 under ubuntu:16.0
+RUN apt-get update && \
+    apt-get -y install software-properties-common && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get -y update && \
     apt-get -y install $(cat /packages/flavor_base_deps/apt_get_packages) && \
 	locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
@@ -18,6 +22,7 @@ RUN apt-get -y update && \
     apt-get -y autoremove && \
     ldconfig
 
-RUN /scripts/install_packages.sh "R" "Rscript -e" /packages/flavor_base_deps/r_packages
-RUN /scripts/install_packages.sh "PYTHON2-PIP" "pip install" /packages/flavor_base_deps/pip_packages
-RUN /scripts/install_packages.sh "PYTHON3-PIP3" "pip3 install" /packages/flavor_base_deps/pip3_packages
+RUN curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py && \
+    python3.6 get-pip.py && \
+    rm get-pip.py
+RUN /scripts/install_packages.sh "PYTHON3-PIP3" "pip install --ignore-installed " /packages/flavor_base_deps/pip3_packages
