build step flavor_base_deps again depends on language_deps, because flavor_base_deps installed basically the same as language_steps such that the possible parallel build of both didn't helped. Use install_packages_batch.sh instead install_packages.sh. Optimize position of COPY commands in Dockerfiles.

--- a/flavors/standard-EXASOL-6.1.0/flavor_base/flavor_base_deps/Dockerfile
+++ b/flavors/standard-EXASOL-6.1.0/flavor_base/flavor_base_deps/Dockerfile
@@ -1,14 +1,7 @@
-FROM ubuntu:18.04
+FROM {{ language_deps }}
 
-ENV DEBIAN_FRONTEND=noninteractive
-
-ENV ARCHIVE_UBUNTU_PREFIX=de.
-RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
-
-COPY 01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
-COPY scripts /scripts
-RUN mkdir -p /packages
-COPY flavor_base_deps/packages /packages/flavor_base_deps
+RUN mkdir -p /packages/flavor_base_deps
+COPY flavor_base_deps/packages/apt_get_packages /packages/flavor_base_deps
 
 RUN apt-get -y update && \
     apt-get -y install $(cat /packages/flavor_base_deps/apt_get_packages) && \
@@ -18,6 +11,10 @@ RUN apt-get -y update && \
     apt-get -y autoremove && \
     ldconfig
 
-RUN /scripts/install_packages.sh "R" "Rscript -e" /packages/flavor_base_deps/r_packages
-RUN /scripts/install_packages.sh "PYTHON2-PIP" "pip install" /packages/flavor_base_deps/pip_packages
-RUN /scripts/install_packages.sh "PYTHON3-PIP3" "pip3 install" /packages/flavor_base_deps/pip3_packages
+COPY scripts /scripts
+COPY flavor_base_deps/packages/cran_packages /packages/flavor_base_deps
+RUN /scripts/install_packages_batch.sh "CRAN" "Rscript -e 'install.packages(c(<<list>>),repos=\"http://cran.r-project.org\")'" '"<<package>>"' "," /packages/flavor_base_deps/cran_packages
+COPY flavor_base_deps/packages/pip_packages /packages/flavor_base_deps
+RUN /scripts/install_packages_batch.sh "PYTHON2-PIP" "pip install <<list>>" "<<package>>" " " /packages/flavor_base_deps/pip_packages
+COPY flavor_base_deps/packages/pip3_packages /packages/flavor_base_deps
+RUN /scripts/install_packages_batch.sh "PYTHON3-PIP3" "pip3 install <<list>>" "<<package>>" " " /packages/flavor_base_deps/pip3_packages
