--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/language_deps/Dockerfile
@@ -1,7 +1,7 @@
 FROM {{udfclient_deps}}
 
-RUN mkdir -p /packages
-COPY language_deps/packages /packages/language_deps
+RUN mkdir -p /packages/language_deps
+COPY language_deps/packages/apt_get_packages /packages/language_deps
 
 # ppa:deadsnakes/ppa needed for python3.6 under ubuntu:16.04
 RUN apt-get update && \
@@ -15,7 +15,13 @@ RUN apt-get update && \
     apt-get -y autoremove && \
     ldconfig
 
-RUN /scripts/install_packages.sh "PYTHON3-PIP3" "python3.6 -m pip install" /packages/language_deps/pip3_packages
+RUN curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py && \
+    python3.6 get-pip.py && \
+    rm get-pip.py
+
+COPY scripts /scripts
+COPY language_deps/packages/pip3_packages /packages/language_deps
+RUN /scripts/install_packages_batch.sh "PYTHON3-PIP" "pip install --ignore-installed <<list>>" "<<package>>" " " /packages/language_deps/pip3_packages
 
 ENV PYTHON3_PREFIX /usr
 ENV PYTHON3_VERSION python3.6
