--- a/flavors/python3-ds-EXASOL-6.1.0/flavor_base/flavor_base_deps/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.1.0/flavor_base/flavor_base_deps/Dockerfile
@@ -1,17 +1,9 @@
-FROM ubuntu:18.04
+FROM {{ language_deps }}
 
-ENV DEBIAN_FRONTEND=noninteractive
-
-ENV ARCHIVE_UBUNTU_PREFIX=de.
-RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
-
-COPY 01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
-COPY scripts /scripts
 RUN mkdir -p /packages
 COPY flavor_base_deps/packages /packages/flavor_base_deps
 
-RUN apt-get update && \
-    apt-get -y update && \
+RUN apt-get -y update && \
     apt-get -y install $(cat /packages/flavor_base_deps/apt_get_packages) && \
 	locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
@@ -19,7 +11,4 @@ RUN apt-get update && \
     apt-get -y autoremove && \
     ldconfig
 
-RUN curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py && \
-    python3.6 get-pip.py && \
-    rm get-pip.py
-RUN /scripts/install_packages.sh "PYTHON3-PIP3" "pip install --ignore-installed " /packages/flavor_base_deps/pip3_packages
+RUN /scripts/install_packages_batch.sh "PYTHON3-PIP" "pip install --ignore-installed <<list>>" "<<package>>" " " /packages/flavor_base_deps/pip3_packages
