add option use_relative_paths to file_directory_list_hasher.py, failed_target in stoppable_task.py is now a member which solve initialisation problems and add test for exaslct to travis, clean up test-flavor to barebone and some refactoring of clean_images.py

--- a/exaslct_src/test/resources/test-flavor/flavor_base/build_run/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/flavor_base/build_run/Dockerfile
@@ -6,13 +6,4 @@ COPY --from={{build_deps}} /bin /bin
 COPY --from={{build_deps}} /opt /opt
 COPY --from={{build_deps}} /etc /etc
 
-RUN ldconfig
-
-RUN mkdir /exaudf_src /exaudf
-COPY src/ /exaudf_src/
-
-#ENV VERBOSE_BUILD "--subcommands --verbose_failures"
-
-RUN cd /exaudf_src/ && \
-	bash build.sh -c dbg --define python=true //:exaudfclient && \
-	cp -r -L bazel-bin/* /exaudf
+RUN mkdir /exaudf
