--- a/exaslct_src/test/resources/test-flavor/flavor_base/flavor_base_deps/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/flavor_base/flavor_base_deps/Dockerfile
@@ -1,24 +1,1 @@
-FROM ubuntu:18.04
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-ENV ARCHIVE_UBUNTU_PREFIX=de.
-RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
-
-COPY 01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
-
-RUN apt-get -y update && \
-    apt-get -y install \
-        curl \
-        locales \
-        python-pip \
-        python-lxml \
-        python-cjson \
-        python-numpy \
-        python-pandas \
-        python-requests && \
-	locale-gen en_US.UTF-8 && \
-    update-locale LC_ALL=en_US.UTF-8 && \
-    apt-get -y clean && \
-    apt-get -y autoremove && \
-    ldconfig
+FROM {{language_deps}}
