--- a/flavors/fancyr-EXASOL-6.0.0/flavor_base/udfclient_deps/Dockerfile
+++ b/flavors/fancyr-EXASOL-6.0.0/flavor_base/udfclient_deps/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 ENV DEBIAN_FRONTEND=noninteractive
 
-ENV ARCHIVE_UBUNTU_PREFIX=de.
+ENV ARCHIVE_UBUNTU_PREFIX=""
 RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
 
 COPY 01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
